--- a/cmd/logic/logic-example.toml
+++ b/cmd/logic/logic-example.toml
@@ -1,4 +1,5 @@
 # This is a TOML document. Boom
+usenats = true
 [discovery]
     nodes = ["127.0.0.1:7171"]
 
@@ -41,6 +42,12 @@
 [kafka]
     topic = "goim-push-topic"
     brokers = ["127.0.0.1:9092"]
+
+[nats]
+    topic = "goim-push-topic"
+    group = "goim-push-group-job"
+    brokers = "nats://localhost:4222"
+    ackinbox = "ack"
 
 [redis]
     network = "tcp"
